# achterhus-server-tools

./: .env.json.example  .gitignore  .pre-commit-config.yaml  .shellcheckrc  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
.github/workflows/: auto-fix.yaml  ci.yaml
lib/: common.sh  configuration.py  download.py  utils.sh
lib/document-processor/: comdirect.sh  ryd.sh  vodafone.sh
systemd/: README.md  backup-drives.service.template  backup-drives.timer  backup-postgres.service.template  backup-postgres.timer  document-processor.service.template  document-processor.timer  get-audiothek-podcasts.service.template  get-audiothek-podcasts.timer  photo-processor.service.template  photo-processor.timer  sync-google-drive.service.template  sync-google-drive.timer
